# inferencacle

./: .gitignore  README.md
config/: nanobot-oracle-patch.json
nanobot-src/: pyproject.toml
nanobot-src/nanobot/agent/: context.py
nanobot-src/nanobot/channels/: manager.py  openai_api.py
nanobot-src/nanobot/cli/: commands.py
nanobot-src/nanobot/config/: schema.py
nanobot-src/nanobot/oracle/: __init__.py  redactor.py  router.py
nanobot-src/nanobot/providers/: oracle_provider.py
oracle/: .env.example  pyproject.toml  test_routing.py
oracle/config/: system_prompt.txt
oracle/src/: main.py
oracle/src/prompt_coach/: coach.py
oracle/src/redactor/: redactor.py
oracle/src/router/: router.py
shared/schemas/: messages.py
